feat(thesis): WIP thesis

--- a/docs/thesis/main.tex
+++ b/docs/thesis/main.tex
@@ -72,16 +72,12 @@
 \kierunek{Informatyka}
 \specjalnosc{Inżynieria Oprogramowania}
 \title{
-    Zastosowanie architektur mikroserwisowych\\
-    w tworzeniu skalowalnych aplikacji webowych\\ 
-    na przykładzie aplikacji do obsługi zamówień restauracyjnych
+    Zastosowanie architektur mikroserwisowych w tworzeniu skalowalnych aplikacji webowych na przykładzie aplikacji do obsługi zamówień restauracyjnych
 }
 % Title in English for English theses
 % In English theses, you may remove this command
 \engtitle{
-    Application of microservice architectures \\
-    in creating scalable web applications:\\
-    a case study of a restaurant order management application
+    Application of microservice architectures in creating scalable web applications: a case study of a restaurant order management application
 }
 % Title in Polish for English theses
 % Use it only in English theses
