--- a/docs/thesis/tex/1-wstep.tex
+++ b/docs/thesis/tex/1-wstep.tex
@@ -27,14 +27,14 @@ Zastosowana architektura wymagała odpowiedniego podziału systemu informatyczne
 
 \subsection{Przegląd podobnych rozwiązań}
 
-W ramach tej pracy inżynierskiej Autor stwierdza, że nie był w stanie przeprowadzić dogłębnego porównania projektowanego systemu z istniejącymi na rynku rozwiązaniami takimi jak Uber Eats, Wolt, Pyszne.pl, Bolt Food \cite{fooddeliveryapps}. Powodem tego jest ograniczony dostęp do szczegółowych informacji na temat ich architektury serwerowej i rozwiązań technologicznych. Ponadto, porównanie funkcjonalności z perspektywy użytkownika końcowego nie było głównym celem pracy, gdyż nacisk położono nie na rozwój licznych funkcjonalności, lecz na badanie aspektów technicznych związanych z tworzeniem skalowalnych aplikacji webowych. W związku z tym analiza skupia się bardziej na kwestiach architektonicznych i wydajnościowych, a nie na bezpośredniej konkurencji z funkcjami oferowanymi przez wymienione platformy.
+W ramach tej pracy inżynierskiej Autor nie był w stanie przeprowadzić dogłębnego porównania projektowanego systemu z istniejącymi na rynku rozwiązaniami takimi jak Uber Eats, Wolt, Pyszne.pl, Bolt Food \cite{fooddeliveryapps}. Powodem tego jest ograniczony dostęp do szczegółowych informacji na temat ich architektury serwerowej i rozwiązań technologicznych. Ponadto, porównanie funkcjonalności z perspektywy użytkownika końcowego nie było głównym celem pracy, gdyż nacisk położono nie na rozwój licznych funkcjonalności, lecz na badanie aspektów technicznych związanych z tworzeniem skalowalnych aplikacji webowych. W związku z tym analiza skupia się bardziej na kwestiach architektonicznych i wydajnościowych, a nie na bezpośredniej konkurencji z funkcjami oferowanymi przez wymienione platformy.
 
 
 \subsection{Struktura pracy}
 
 Kolejne rozdziały prezentują kolejne etapy prac nad prezentowanym systemem.
 
-Na początku zostaną omówione popularne techniki tworzenia skalowalnych aplikacji webowych wykorzystane w niniejszej pracy inżynierskiej, w tym architektura mikroserwisowa. Zostanie następnie przedstawione jej porównanie do standardowej architektury monolitycznej.
+Na początku zostaną omówione popularne techniki tworzenia skalowalnych aplikacji webowych wykorzystane w niniejszej pracy inżynierskiej, w tym architektura mikroserwisowa. Zostanie następnie przedstawione jej porównanie ze standardową architekturą monolityczną.
 
 Kolejny rozdział będzie poświęcony analizie wymagań budowanego systemu. Przedstawiony zostanie słownik dziedziny problemu, metoda wydzielania mikroserwisów, wymagania funkcjonalne i niefunkcjonalne.
 
