--- a/docs/thesis/tex/4-architektura.tex
+++ b/docs/thesis/tex/4-architektura.tex
@@ -69,6 +69,8 @@ W celu zapewnienia komunikacji pomiędzy poszczególnymi komponentami systemu zo
 
 \end{itemize}
 
+\clearpage
+
 \subsection{Persystencja danych i magazyn zdarzeń}
 
 Z powodu zastosowania wzorców CQRS i Event Sourcing w części serwerowej systemu odpowiadającej za obsługę komend nie ma konieczności stosowania standardowej bazy danych. Zamiast tego zastosowano specjalistyczne rozwiązanie, które umożliwia przechowywanie zdarzeń w postaci strumieni zdarzeń (ang. \textit{event streams}). Jest to \textbf{Magazyn zdarzeń} (ang. \textit{event store}), który jest wykorzystywany przez wszystkie serwisy.
@@ -87,13 +89,13 @@ W celu zapewnienia komunikacji pomiędzy poszczególnymi komponentami systemu zo
 
 \subsection{Uwierzytelnianie i autoryzacja}
 
-W celu zapewnienia bezpieczeństwa systemu został zaimplementowany mechanizm uwierzytelniania i autoryzacji. W projekcie został wykorzystany framework Spring Security. Jest to framework, który zapewnia szeroki zakres funkcjonalności związanych z bezpieczeństwem, takich jak uwierzytelnianie, autoryzacja, zarządzanie sesjami, obsługa tokenów JWT, obrona przed atakami typu CSRF i wiele innych.
+W celu zapewnienia bezpieczeństwa systemu został zaimplementowany mechanizm uwierzytelniania i autoryzacji. Wykorzystano w tym celu framework Spring Security, który zapewnia szeroki zakres funkcjonalności związanych z bezpieczeństwem, takich jak uwierzytelnianie, autoryzacja, zarządzanie sesjami, obsługa tokenów JWT, obrona przed atakami typu CSRF i wiele innych.
 
 Zastosowanym w projekcie mechanizmem uwierzytelniania jest uwierzytelnianie oparte na tokenach JWT (ang. \textit{JSON Web Token}). Jest to standard definiujący sposób bezpiecznej wymiany informacji w postaci obiektów JSON pomiędzy stroną kliencką a serwerem. Tokeny JWT są podpisane cyfrowo, co umożliwia weryfikację ich autentyczności i integralności. W projekcie zostały wykorzystane tokeny JWT oparte na algorytmie RS256 (ang. \textit{RSA Signature with SHA-256}), który jest algorytmem asymetrycznym, co oznacza, że do podpisania tokena wykorzystywany jest klucz prywatny, a do weryfikacji klucz publiczny.
 
 Tokeny JWT generowane są na platformie Auth0, po wcześniejszym uwierzytelnieniu użytkownika. Jest to platforma, która umożliwia zarządzanie tożsamością i dostępem, a także generowanie tokenów JWT w ramach protokołu OAuth2. Auth0 wspiera wiele różnych sposobów uwierzytelniania, takich jak uwierzytelnianie za pomocą loginu i hasła, uwierzytelnianie za pomocą kont społecznościowych, uwierzytelnianie za pomocą SSO (ang. \textit{Single Sign-On}), uwierzytelnianie za pomocą MFA (ang. \textit{Multi-Factor Authentication}), itp. Dodatkowo Auth0 zapewnia mechanizmy do zarządzania użytkownikami, rolami, uprawnieniami, a także logami operacji.
 
-OAuth2 (ang. \textit{Open Authorization}) jest to otwarty standard autoryzacji, który umożliwia bezpieczny dostęp do zasobów użytkownika, bez konieczności ujawniania jego danych uwierzytelniających. W projekcie został wykorzystany protokół OAuth2 w wersji Authorization Code Grant, który jest jednym z najbardziej bezpiecznych sposobów uwierzytelniania. W tym trybie użytkownik jest przekierowywany na stronę logowania Auth0, gdzie po poprawnym uwierzytelnieniu jest przekierowywany z powrotem do aplikacji klienckiej, a wraz z nim przesyłany jest kod, który może być następnie wymieniony na token JWT. Token ten jest następnie wykorzystywany do autoryzacji użytkownika w systemie, przez co nie ma konieczności przekazywania danych uwierzytelniających do serwisów serwerowych. JWT przekazywane jest w ramach nagłówka HTTP \textit{Authorization} w postaci \textit{Bearer Token}.
+OAuth2 (ang. \textit{Open Authorization}) to otwarty standard autoryzacji, który umożliwia bezpieczny dostęp do zasobów użytkownika, bez konieczności ujawniania jego danych uwierzytelniających. W projekcie został wykorzystany protokół OAuth2 w wersji Authorization Code Grant, który jest jednym z najbardziej bezpiecznych sposobów uwierzytelniania. W tym trybie użytkownik jest przekierowywany na stronę logowania Auth0, gdzie po poprawnym uwierzytelnieniu jest przekierowywany z powrotem do aplikacji klienckiej, a wraz z nim przesyłany jest kod, który może być następnie wymieniony na token JWT. Token ten jest następnie wykorzystywany do autoryzacji użytkownika w systemie, przez co nie ma konieczności przekazywania danych uwierzytelniających do serwisów serwerowych. JWT przekazywane jest w ramach nagłówka HTTP \textit{Authorization} w postaci \textit{Bearer Token}.
 
 \subsection{Integracje zewnętrzne}
 
